test/e2e/functional/alb-canary-rollout-with-delay.yaml
apiVersion: v1
kind: Service
metadata:
  name: alb-canary-with-delay-root
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: alb-canary-with-delay
---
apiVersion: v1
kind: Service
metadata:
  name: alb-canary-with-delay-desired
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: alb-canary-with-delay
---
apiVersion: v1
kind: Service
metadata:
  name: alb-canary-with-delay-stable
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: alb-canary-with-delay
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-canary-with-delay-ingress
  annotations:
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: alb-canary-with-delay-root
                port:
                  name: use-annotation
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: alb-canary-with-delay
spec:
  selector:
    matchLabels:
      app: alb-canary-with-delay
  template:
    metadata:
      labels:
        app: alb-canary-with-delay
    spec:
      containers:
        - name: alb-canary-with-delay
          lifecycle:
            postStart:
              exec:
                command:
                  - sleep
                  - "2"
          image: nginx:1.19-alpine
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: 16Mi
              cpu: 5m
  strategy:
    canary:
      canaryService: alb-canary-with-delay-desired
      stableService: alb-canary-with-delay-stable
      trafficRouting:
        alb:
          ingress: alb-canary-with-delay-ingress
          rootService: alb-canary-with-delay-root
          servicePort: 80
      steps:
        - setWeight: 10
        - pause: {duration: 5s}
        - setWeight: 20
        - pause: {duration: 5s}
